k8s/deployment-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
spec:
  replicas: 3  
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: ghcr.io/tanthana48/p2-user-service/p2-user-serivce:latest
          ports:
            - containerPort: 8080  
      imagePullSecrets:
        - name: regcred
